--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super seceret Key"
+  },
   "ConnectionStrings":{
     "DefaultConnection": "Data Source=datingapp.db"
   },
